hphp/test/quick/typedef_non_class_fail1.php.expectf
HipHop Fatal error: Argument 1 passed to foo() must be an instance of MyString, int given in %s on line 6
